html form to send data through HTTP GET

--- a/public/test.html
+++ b/public/test.html
@@ -1,1 +1,16 @@
-<h1>demo static content</h1>
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>Demo static content</h1>
+<form action="/animal">
+    <input type='text' name="name" placeholder="dog">
+    <input type="text" name="family" placeholder="felidae">
+    <input type="submit" value="search">
+
+</form>
+
+
+
+</body>
+</html>
