--- a/public/test.html
+++ b/public/test.html
@@ -3,10 +3,18 @@
 <body>
 
 <h1>Demo static content</h1>
+<h2>get all</h2>
+<a href="/animals">get all</a>
+<h2>search</h2>
 <form action="/animal">
     <input type='text' name="name" placeholder="dog">
     <input type="text" name="family" placeholder="felidae">
     <input type="submit" value="search">
+</form>
+<h2>insert</h2>
+<form action="/animal?mixed=yes&confution=big" method="post">
+    <input type="text" name="name" placeholder="frog">
+    <input type="submit" value="insert">
 
 </form>
 
